@@ -40,6 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
+* [jan] Fix saving searches to virtual address books (Bug #9776).
 * [mjr] Datatree share to SQL upgrade script refactored for Horde 4.
 * [jan] Move all executable scripts to bin/ and prefix with turba-.
 * [jan] Add fields to the first address if multiple passed to addField() API method (Request #3482).
@@ -1138,6 +1139,8 @@
    <date>2011-03-31</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [jan] Fix saving searches to virtual address books (Bug #9776).
+* [mjr] Datatree share to SQL upgrade script refactored for Horde 4.
 * [jan] Move all executable scripts to bin/ and prefix with turba-.
 * [jan] Add fields to the first address if multiple passed to addField() API method (Request #3482).
    </notes>
